add cau-hinh route
